--- a/app/style.css
+++ b/app/style.css
@@ -1,2 +1,17 @@
-#map { height: 60%; }
-#cont { height: 40%; }
+#map { height:	60%; }
+#cont { height:	40%; width:100%;}
+
+.pieLeft {
+	width:85%;
+	height:100%;
+}
+.pieRight {
+	width:15%;
+	height:100%;
+}
+
+.text {
+	font-family: helvetica;
+	fill: white;
+	color: white;
+}
