--- a/maincss.css
+++ b/maincss.css
@@ -100,7 +100,7 @@ body{
   font-size: 2vh;
   min-width: 33%;
   min-height: 33%;
-  flex:1 auto;
+  flex:1;
   display: flex;
   flex-direction : column;
 }
