divvy_stations.json missing id & actual stars values

--- a/app/style.css
+++ b/app/style.css
@@ -31,7 +31,7 @@
 	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.85);
 }
 
-#popup-graph-container { 
+/*#popup-graph-container { 
 	height:	100; 
 	width:	100%;		
 }
@@ -39,4 +39,4 @@
 #stars-container { 
 	height:	30; 
 	width:	100%;		
-}
+}*/
