--- a/maincss.css
+++ b/maincss.css
@@ -32,11 +32,6 @@ body{
 .right{
   order: 10;
 }
-.full-size{
-  height: 100%;
-  width: 100%;
-  background-color:blue;
-}
 
 .right-invisible{
 
@@ -54,11 +49,6 @@ body{
 #mainButtons {
   width: 100%;
   height: 5%;
-}
-
-.full-size{
-  width: 100%;
-  height: 100%;
 }
 
 .flex-container{
@@ -140,7 +130,17 @@ body{
 .div-graph {
   flex:10;
   display: flex;
+  margin:1vh;
 }
 .invisible{
   display: none;
+}
+
+.main-buttons {
+  text-align: center;
+  flex: 1;
+  border-style:ridge;
+  border-color:#bbb #888 #666 #aaa;
+  border-width: 2px 2px 2px 2px;
+  font-size: 3vh;
 }
