--- a/maincss.css
+++ b/maincss.css
@@ -17,6 +17,16 @@ body{
   width: 40%;
 }
 
+.label-filter{
+
+}
+
+.box-filter{
+  text-align: center;
+  height: 50%;
+  width: 50%;
+}
+
 .left{;
   order:-10;
 }
