--- a/app/style.css
+++ b/app/style.css
@@ -15,7 +15,10 @@
 	margin: 5px 0 10px;
 	padding-bottom: 5px;
 	color: #404040;
-	font-size: 18px;
+	font-size: 3vh;
 	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.85);
 }
 
+.popup-text {
+	font-size: 1.5vh;
+}
