--- a/app/graphics/Slider.css
+++ b/app/graphics/Slider.css
@@ -1,10 +1,11 @@
 input[type=range]{
     -webkit-appearance: none;
+    border-radius: 2vh;
 }
 
 input[type=range]::-webkit-slider-runnable-track {
     //width: 300px;
-    height: 5px;
+    height: 2vh;
     background: #ddd;
     border: none;
     border-radius: 3px;
@@ -15,7 +16,7 @@ input[type=range]::-webkit-slider-runnable-track {
 input[type=range]::-webkit-slider-thumb {
     -webkit-appearance: none;
     border: none;
-    height: 16px;
+    height: 3vh;
     width: 16px;
     border-radius: 50%;
     background: lightgrey;
