--- a/maincss.css
+++ b/maincss.css
@@ -14,16 +14,33 @@ body{
 
 .forty {
   height: 100%;
-  width: 40%;
+  width: 35%;
 }
 
 .label-filter{
 
 }
 
+.div-line-filter{
+  display: flex;
+  flex:1;
+  flex-direction : row;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+.filter-div{
+  font-size: 2vh;
+  font-family: sans-serif;
+  flex-basis:0;
+  flex:1;
+  display: flex;
+  flex-direction : column;
+}
+
 .box-filter{
-  text-align: center;
-  height: 50%;
+  font-size: 2vh;
+  height: 2vh;
   width: 50%;
 }
 
@@ -80,7 +97,7 @@ body{
 .flex-item-penta {
   text-align: center;
   display: flex;
-  flex: 4;
+  flex: 3.5;
 }
 
 .flex-horizontal{
@@ -162,4 +179,20 @@ body{
 
 #hourSlider {
   width: 100%;
+  height: 10%;
+}
+
+.pick-vis-div{
+  flex:1;
+  display: flex;
+  flex-direction : row;
+  flex-wrap : wrap;
+}
+
+.pick-single-graph{
+  flex:1;
+  display: flex;
+  flex-direction : column;
+  min-width: 50%;
+  min-height: 33%;
 }
