--- a/maincss.css
+++ b/maincss.css
@@ -30,7 +30,7 @@ body{
 }
 
 .filter-div{
-  font-size: 2vh;
+  font-size: 2.5vh;
   font-family: sans-serif;
   flex-basis:0;
   flex:1;
@@ -39,9 +39,35 @@ body{
 }
 
 .box-filter{
-  font-size: 2vh;
-  height: 3vh;
+  font-size: 3vh;
+  height: 4vh;
   width: 50%;
+}
+
+.det-title-graphs{
+  font-family: sans-serif;
+  font-size: 3vh;
+}
+
+.detail-main-div{
+  flex:1;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.detail-pie-div{
+  flex:1;
+  display: flex;
+  flex-direction: column;
+  min-width: 48%;
+}
+
+.detail-line-div{
+  flex:1;
+  display: flex;
+  flex-direction: column;
+  min-width: 100%;
 }
 
 .left{;
@@ -64,8 +90,14 @@ body{
 
 }
 
+.hourSelector {
+  display: flex;
+  align-items:center;
+  height: 5vh;
+}
+
 .left-invisible{
-    width: 0%;
+  width: 0%;
 }
 
 #mainCointainer {
@@ -195,4 +227,8 @@ body{
   flex-direction : column;
   min-width: 50%;
   min-height: 33%;
+}
+.pick-titles{
+  font-size: 3vh;
+  font-family: sans-serif;
 }
