--- a/maincss.css
+++ b/maincss.css
@@ -96,6 +96,16 @@ body{
   height: 5vh;
 }
 
+
+.det-title{
+  text-align: center;
+  font-size: 3vh;
+  font-family: sans-serif;
+  min-width: 100%;
+  height: 5vh;
+  align-items:center;
+}
+
 .left-invisible{
   width: 0%;
 }
