--- a/maincss.css
+++ b/maincss.css
@@ -5,6 +5,7 @@ body{
   bottom: 0;
   left: 0;
   right: 0;
+  background-color: rgba(232, 231, 231, 0.62);
 }
 
 .quart{
@@ -15,6 +16,11 @@ body{
 .forty {
   height: 100%;
   width: 35%;
+}
+
+.ottanta {
+  height: 100%;
+  width: 80%;
 }
 
 .label-filter{
@@ -42,6 +48,7 @@ body{
   font-size: 3vh;
   height: 4vh;
   width: 50%;
+  border-radius: 1.2vh;
 }
 
 .det-title-graphs{
@@ -213,10 +220,31 @@ body{
 .main-buttons {
   text-align: center;
   flex: 1;
-  border-style:ridge;
-  border-color:#bbb #888 #666 #aaa;
-  border-width: 2px 2px 2px 2px;
+  border-style: solid;
+  border-color: #b3b3b3;
+  margin: 0.1vh;
+  border-radius: 20vh;
+  border-width: 1%;
   font-size: 3vh;
+}
+
+.border-gray {
+  border-style: solid;
+  border-color: #b3b3b3;
+  margin: 0.5vh;
+  border-radius: 3vh;
+}
+
+.main-buttons-selected{
+  text-align: center;
+  flex: 1;
+  border-style: solid;
+  border-color: #b3b3b3;
+  margin: 0.1vh;
+  border-radius: 20vh;
+  border-width: 1%;
+  font-size: 3vh;
+  background-color: #b3b3b3;
 }
 
 #hourSlider {
@@ -235,8 +263,12 @@ body{
   flex:1;
   display: flex;
   flex-direction : column;
-  min-width: 50%;
+  min-width: 45%;
   min-height: 33%;
+  border-style: solid;
+  border-radius: 2%;
+  margin:1%;
+  border-color: #b3b3b3
 }
 .pick-titles{
   font-size: 3vh;
