--- a/mainApp.css
+++ b/mainApp.css
@@ -6,6 +6,7 @@ body{
   left: 0;
   right: 0;
   display: flex;
+  background-color: rgba(232, 231, 231, 0.62);
 }
 
 .single-frame{
@@ -19,6 +20,11 @@ body{
 .button{
   width: 2%;
   font-size: 1 vh;
+  background-color: rgba(232, 231, 231, 0.62);
+  border-style: solid;
+  border-color: #b3b3b3;
+  margin: 0.5vh;
+  border-radius: 3vh;
 }
 
 .text-button{
